fix layout bug

--- a/assets/style.css
+++ b/assets/style.css
@@ -37,7 +37,7 @@ body {
     margin-top: 40px;
     margin-bottom: 20px;
 }
-.details {
+.details, .detail-txt {
     font-size: 15px;
 }
 /*Container & Formatting for Songs*/
